force-app/main/default/objects/vlocity_ins__InsuredGroupCensusMember__c/fields/vlocity_ins__DependentType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__DependentType__c</fullName>
    <label>Dependent Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>