force-app/main/default/objects/vlocity_ins__InsuredGroupCensusMember__c/fields/vlocity_ins__MemberType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__MemberType__c</fullName>
    <label>Member Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
            <value>
                <fullName>Cobra</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>